# Reactant.jl

./: .JuliaFormatter.toml  .clang-format  .codecov.yml  .gitignore  Artifacts.toml  CondaPkg.toml  EXECUTION_READY.md  LocalPreferences.toml  Project.toml  README.md  Reactant.jl  TODO_IMPLEMENTATION_PLAN.md  stable  test_load_executable.jl  test_offline_compile.jl  v0.2  versions.js
.buildkite/: pipeline.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
benchmark/: CondaPkg.toml  Project.toml  aggregate.jl  asv.jl  benchmarks.jl  runbenchmarks.jl  setup.jl  utils.jl  vit.jl
benchmarks/: data.js  data.old.js  index.html
benchmarks_tflops/: data.js  index.html
dev/: .documenter-siteinfo.json  404.html  hashmap.json  index.html  objects.inv
dlpack/: dlpack.jl  main.jl
docs/: Project.toml  make.jl  package.json
examples/: shape_dtype_struct_example.jl
ext/: ReactantAbstractFFTsExt.jl  ReactantAdaptExt.jl  ReactantArrayInterfaceExt.jl  ReactantBFloat16sExt.jl  ReactantCUDAExt.jl  ReactantDLFP8TypesExt.jl  ReactantFFTWExt.jl  ReactantFillArraysExt.jl  ReactantFixedSizeArraysExt.jl  ReactantFloat8sExt.jl  ReactantKernelAbstractionsExt.jl  ReactantLogExpFunctionsExt.jl  ReactantMCMCDiagnosticToolsExt.jl  ReactantMPIExt.jl  ReactantMetalExt.jl  ReactantNNlibExt.jl  ReactantNPZExt.jl  ReactantOMEinsumExt.jl  ReactantOffsetArraysExt.jl  ReactantOneHotArraysExt.jl  ReactantPDMatsExt.jl  ReactantPythonCallExt.jl  ReactantRandom123Ext.jl  (+11 more)
lib/ReactantExtra/tblgen/: CMakeLists.txt  jl-generators.cc  mlir-jl-tblgen.cc
(+94486 files in other folders)
